tests/ui/rfcs/rfc-2632-const-trait-impl/const-impl-requires-const-trait.stderr
error: const `impl` for trait `A` which is not marked with `#[const_trait]`
  --> $DIR/const-impl-requires-const-trait.rs:8:12
   |
LL | pub trait A {}
   | - help: mark `A` as const: `#[const_trait]`
...
LL | impl const A for () {}
   |            ^
   |
   = note: marking a trait with `#[const_trait]` ensures all default method bodies are `const`
   = note: adding a non-const method body in the future would be a breaking change

error[E0107]: missing generics for trait `A`
  --> $DIR/const-impl-requires-const-trait.rs:8:12
   |
LL | impl const A for () {}
   |            ^ expected 18446744073709551615 generic arguments
   |
note: trait defined here, with 18446744073709551615 generic parameters: 
  --> $DIR/const-impl-requires-const-trait.rs:5:11
   |
LL | pub trait A {}
   |           ^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0107`.
